--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     
 
     <section class="socials">
-        <a href="https://www.instagram.com/siddharth_gfx" target="_blank" class="btn">Follow on Instagram</a>
+        <a href="https://www.instagram.com/siddharth_gfx_" target="_blank" class="btn">Follow on Instagram</a>
     </section>
 
     <footer>
